refact : Sort
move it in the Service layer